# sample-python

./: Project-requirements.md  README.md
airflow/: docker-compose.yml  requirements.txt  settings.json
airflow/dags/: data_etl.py
cti/: Dockerfile  pyproject.toml
cti/src/ctizh/dataeng/load/: redshift_load.py
cti/src/ctizh/dataeng/transform/: extract_transform.py  record.py
cti/tests/cti/dataeng/transform/: test_record.py
